--- a/style.css
+++ b/style.css
@@ -1,3 +1,39 @@
 .body{
     display: flex;
+    justify-content: space-around;
+}
+
+ul{
+    display: flex;
+    list-style-type: none;
+    gap: 8px;
+    padding: 0;
+    margin: 0;
+    
+  }
+
+.topper, .top{
+    display: flex;
+    background-color: #1f2937;
+    color: white;
+}
+
+.top-left{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.quote{
+    background-color: #e5e7eb;
+}
+
+button{
+    width: 48px;
+    height: 16px;
+}
+
+.placeholder{
+    padding: 48px;
+    background-color: #e5e7eb;
 }
