--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .body{
     display: flex;
     justify-content: space-around;
+    font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
 ul{
@@ -16,24 +17,60 @@ ul{
     display: flex;
     background-color: #1f2937;
     color: white;
+    padding: 32px;
+}
+
+.top{
+    justify-content: space-evenly;
+    gap: 32px
+}
+
+.topper{
+    justify-content: space-evenly;
 }
 
 .top-left{
     display: flex;
     flex-direction: column;
-    
 }
 
 .quote{
     background-color: #e5e7eb;
 }
 
-button{
-    width: 48px;
-    height: 16px;
+.top-left .box{
+    font-weight: 900;
+    font-size: 48px;
+    flex-wrap: wrap;
+    width: 265px;
+}
+
+.logo{
+    font-size:24px;
+    color:#f9faf8
+}
+
+.subtext{
+    flex-wrap: wrap;
+    width: 265px;
 }
 
 .placeholder{
-    padding: 48px;
-    background-color: #e5e7eb;
+    background-color: lightgray;
+}
+
+.mid{
+    display: flex;
+    justify-content: space-around;
+}
+
+.card{
+    border: #3882f6;
+    border-width: thin;
+}
+
+.box{
+    font: 36px;
+    font-weight: 900;
+    justify-content: center;
 }
