--- a/style.css
+++ b/style.css
@@ -83,10 +83,13 @@ ul{
 
 .bottom{
     padding: 30px;
+    color: white;
+    background-color: #3882f6;
+    display: flex;
+    justify-content: space-between;
 }
 
 .signup{
-    color: white;
-    background-color: #3882f6;
-
+    display: flex;
+    flex-direction: column;
 }
