--- a/style.css
+++ b/style.css
@@ -120,4 +120,10 @@ button{
     color: white;
     border-color: white;
     border-radius: 4px;
+    flex-shrink: 1;
+}
+
+#bottom_button{
+    height: 24px;
+    align-self:center;
 }
