--- a/style.css
+++ b/style.css
@@ -7,29 +7,30 @@ body{
     font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
-ul{
+.links{
     display: flex;
-    list-style-type: none;
-    gap: 8px;
+    text-decoration: none;
+    gap: 24px;
     padding: 0;
     margin: 0;
   }
+
+a {
+    color: #e5e7eb;
+    text-decoration: none;
+    }
+
 
 .topper, .top{
     display: flex;
     background-color: #1f2937;
     color: white;
     padding: 24px;
-}
+    justify-content: space-around;
+    align-items: center;
+    gap: 16px;
+} 
 
-.top{
-    justify-content: space-evenly;
-    gap: 32px
-}
-
-.topper{
-    justify-content: space-evenly;
-}
 
 .test{
     display: flex;
